<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/notify"
        app:showAsAction="ifRoom"/>



    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_box_white"
        android:title="@string/intro_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
</menu>