<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- TODO: Update blank fragment layout -->

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/appname"
                android:textSize="20sp"
                android:fontFamily="@font/droidsansarabic"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/main_logo"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/firsttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ministry_of_local_government_ar"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/droidsansarabic" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/All_Rights_Reserved"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/droidsansarabic"/>

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_version"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:fontFamily="@font/droidsansarabic"/>

    </LinearLayout>
</ScrollView>
