<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FullSize"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayandWhite"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/droidsansarabic"
            android:gravity="center"
            android:text="@string/info_of_user"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/NationalID"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/droidsansarabic"
            android:gravity="right"
            android:hint="@string/National_ID"
            android:inputType="number"
            android:maxLength="12"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry">
            <requestFocus/>
        </EditText>




        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_edittext"
            android:digits="أ ا ب ت د ج ح خ ه ع إ غ ف لإ ق ُ ً ٌ َط ك م ن ت ا ل لأ ب ي س ٍ  ش ِظ ز و ة آ ى لا ر ؤ ء ئ ث ص "
            android:fontFamily="@font/droidsansarabic"
            android:gravity="right"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLength="40"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/droidsansarabic"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:maxLength="30"
            android:gravity="right"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >
            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/login_button_bk"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="15dp"/>
        </RelativeLayout>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>
