<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- TODO: Update blank fragment layout -->


        <ImageView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centers"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:fontFamily="@font/droidsansarabic"
            />



        <TextView
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_center"
            android:gravity="right"
            android:textSize="20sp"
            android:layout_marginTop="7dp"
            />


        <LinearLayout
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/call_phone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:src="@drawable/ic_phone_call"
                />

            <TextView
                android:layout_weight="4"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/real_phone_number_center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_center"
            android:gravity="right"
            android:textSize="20sp"
            android:layout_marginEnd="15dp"
            />

        <LinearLayout
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/email"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:src="@drawable/ic_mail"
                />

            <TextView
                android:layout_weight="4"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

        </LinearLayout>



        <View
            android:id="@+id/_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/darker_gray"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
               <include layout="@layout/base_map_fragment"/>
            </RelativeLayout>
        </ScrollView>


    </LinearLayout>

</ScrollView>

