<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/loginParent"
    android:background="@color/colorWhite">


    <androidx.core.widget.NestedScrollView
        style="@style/FullSize"
        android:fillViewport="true">


        <RelativeLayout
            android:id="@+id/root_layout"
            style="@style/FullSize">


            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/background_number_verification"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/VerifyYourNumber"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/droidsansarabic"
                    />
            </RelativeLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/relative"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-64dp"
                android:src="@drawable/ic_sms" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/img"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    style="@style/parent"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:gravity="center"
                    android:maxLines="1"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/droidsansarabic"
                    android:textColor="@color/colorGreyDark"
                    android:textStyle="bold" >

                    <requestFocus/>
                </com.google.android.material.textfield.TextInputEditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_message"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/droidsansarabic"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"/>


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/login_proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    app:maxImageSize="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="15dp" />


            </LinearLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


